--- a/www/js/modules/home/index/home.template.html
+++ b/www/js/modules/home/index/home.template.html
@@ -2,7 +2,7 @@
     <div class="buttons">
         <button class="button">Left Button</button>
     </div>
-    <h1 class="title">Title!</h1>
+    <h1 class="title">{{home.user.username}}</h1>
 </ion-header-bar>
 
 <ion-content>
