--- a/www/index.html
+++ b/www/index.html
@@ -28,6 +28,7 @@
         <script src="js/modules/home/home.router.js"></script>
         <script src="js/modules/home/index/home.controller.js"></script>
         <script src="js/modules/home/view/homeview.controller.js"></script>
+        <script src="js/modules/home/create/homecreate.controller.js"></script>
     </head>
     <body ng-app="getlist">
         <div ui-view="application"></div>
