Night time progress

--- a/www/js/modules/home/create/homecreate.template.html
+++ b/www/js/modules/home/create/homecreate.template.html
@@ -1,4 +1,7 @@
 <ion-header-bar>
+    <div class="buttons">
+        <button class="button" ui-sref="application.home">Back</button>
+    </div>
     <h1 class="title">Create view</h1>
 </ion-header-bar>
 
